# Proyecto1

./: README  activity_main_Server.xml  activity_main_cliente.xml
Application/Cliente/: CMakeLists.txt  JsonParser.cpp  main.cpp
Cliente/: Arreglo.cpp  Arreglo.h  CMakeLists.txt  JsonParser.cpp  main.cpp  xReference.cpp
MeshMemManagerFinal/: Arreglo.java  Json.java  LinkedList.java  Lista.java  Log_Mensages.java  MainActivity.java  MostrarInfo.java  Node.java  Nodo.java
MeshMemNodeFinal/app/: build.gradle  proguard-rules.pro
MeshMemNodeFinal/app/src/androidTest/java/com/example/ronny/meshmemnode/: ApplicationTest.java
MeshMemNodeFinal/app/src/main/: AndroidManifest.xml
MeshMemNodeFinal/app/src/main/java/com/example/ronny/meshmemnode/AccesoDatos/: JSON.java  SmsReceiver.java
MeshMemNodeFinal/app/src/main/java/com/example/ronny/meshmemnode/EstructurasDatos/: Arreglo.java  LinkedList.java  Node.java
MeshMemNodeFinal/app/src/main/java/com/example/ronny/meshmemnode/UILogica/: Informacion.java  Log_Mensages.java  MainActivity.java  MapaMemoria.java
MeshMemNodeFinal/app/src/main/res/layout/: activity_informacion.xml  activity_log__mensages.xml  activity_main.xml  activity_mapamemoria.xml
MeshMemNodeFinal/app/src/main/res/values/: strings.xml
MeshMemNodeFinal/app/src/test/java/com/example/ronny/meshmemnode/: ExampleUnitTest.java
NodeMesh/: Cliente.java  JSON.java
